src/fetchfeedsjob.cpp
@@ -1,5 +1,5 @@
 /**
- * SPDX-FileCopyrightText: 2021 Bart De Vries <bart@mogwai.be>
+ * SPDX-FileCopyrightText: 2021-2022 Bart De Vries <bart@mogwai.be>
  *
  * SPDX-License-Identifier: GPL-2.0-only OR GPL-3.0-only OR LicenseRef-KDE-Accepted-GPL
  */
@@ -9,6 +9,7 @@
 #include <QTimer>
 
 #include <KLocalizedString>
+#include <ThreadWeaver/Queue>
 
 #include "error.h"
 #include "fetcher.h"
@@ -16,6 +17,8 @@
 #include "models/errorlogmodel.h"
 #include "settingsmanager.h"
 #include "updatefeedjob.h"
+
+using namespace ThreadWeaver;
 
 FetchFeedsJob::FetchFeedsJob(const QStringList &urls, QObject *parent)
     : KJob(parent)
@@ -43,20 +46,45 @@ void FetchFeedsJob::fetch()
     setTotalAmount(KJob::Unit::Items, m_urls.count());
     setProcessedAmount(KJob::Unit::Items, 0);
 
+    qCDebug(kastsFetcher) << "Number of feed update threads:" << Queue::instance()->currentNumberOfThreads();
+
     for (int i = 0; i < m_urls.count(); i++) {
         QString url = m_urls[i];
 
-        UpdateFeedJob *updateFeedJob = new UpdateFeedJob(url, this);
-        m_feedjobs[i] = updateFeedJob;
-        connect(this, &FetchFeedsJob::aborting, updateFeedJob, &UpdateFeedJob::abort);
-        connect(updateFeedJob, &UpdateFeedJob::result, this, [this, url, updateFeedJob]() {
-            if (updateFeedJob->error()) {
-                Q_EMIT logError(Error::Type::FeedUpdate, url, QString(), updateFeedJob->error(), updateFeedJob->errorString(), QString());
+        qCDebug(kastsFetcher) << "Starting to fetch" << url;
+        Q_EMIT Fetcher::instance().feedUpdateStatusChanged(url, true);
+
+        QNetworkRequest request((QUrl(url)));
+        request.setTransferTimeout();
+
+        QNetworkReply *reply = Fetcher::instance().get(request);
+        connect(this, &FetchFeedsJob::aborting, reply, &QNetworkReply::abort);
+        connect(reply, &QNetworkReply::finished, this, [this, reply, i, url]() {
+            qCDebug(kastsFetcher) << "got networkreply for" << reply;
+            if (reply->error()) {
+                if (!m_abort) {
+                    qCDebug(kastsFetcher) << "Error fetching feed" << reply->errorString();
+                    Q_EMIT logError(Error::Type::FeedUpdate, url, QString(), reply->error(), reply->errorString(), QString());
+                }
+                setProcessedAmount(KJob::Unit::Items, processedAmount(KJob::Unit::Items) + 1);
+                Q_EMIT Fetcher::instance().feedUpdateStatusChanged(url, false);
+            } else {
+                QByteArray data = reply->readAll();
+
+                UpdateFeedJob *updateFeedJob = new UpdateFeedJob(url, data);
+                m_feedjobs[i] = updateFeedJob;
+                connect(this, &FetchFeedsJob::aborting, updateFeedJob, &UpdateFeedJob::abort);
+                connect(updateFeedJob, &UpdateFeedJob::finished, this, [this, url]() {
+                    setProcessedAmount(KJob::Unit::Items, processedAmount(KJob::Unit::Items) + 1);
+                    Q_EMIT Fetcher::instance().feedUpdateStatusChanged(url, false);
+                });
+
+                stream() << updateFeedJob;
+                qCDebug(kastsFetcher) << "Just started updateFeedJob" << i + 1;
             }
-            setProcessedAmount(KJob::Unit::Items, processedAmount(KJob::Unit::Items) + 1);
+            reply->deleteLater();
         });
-        updateFeedJob->start();
-        qCDebug(kastsFetcher) << "Just started updateFeedJob" << i + 1;
+        qCDebug(kastsFetcher) << "End of retrieveFeed for" << url;
     }
     qCDebug(kastsFetcher) << "End of FetchFeedsJob::fetch";
 }
